# realtime-comment-analytics

./: LICENSE  README.md  docker-compose.yml
ingestion-service/: pyproject.toml
ingestion-service/app/: main.py  parser.py
ingestion-service/app/configs/: settings.py
ingestion-service/app/services/: chat_poller.py  message_consumer.py  message_handlers.py  message_producer.py  message_transformer.py
ingestion-service/app/utils/: json_utils.py
ingestion-service/assets/: diagram.py
