[tool.poetry]
name = "ingestion-service"
version = "0.1.0"
description = ""
authors = ["vantutran2k1 <vantu.tran2k1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
google-api-python-client = "^2.184.0"
dotenv = "^0.9.9"
black = "^25.9.0"
pydantic-settings = "^2.11.0"
pydantic = "^2.12.0"
confluent-kafka = "^2.12.0"
diagrams = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
